<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/antisana"
    tools:context=".GalleryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
    <Button
        android:id="@+id/volcan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_volcan"
        android:background="@color/colorblank"
        android:drawableLeft="@mipmap/icon_antisanagallery_foreground"
        android:textColor="@color/colorblack"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/mica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_mica"
        android:background="@color/colorblank"
        android:textColor="@color/colorblack"
        android:drawableLeft="@mipmap/icon_micas_foreground"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/paramo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit_paramo"
        android:background="@color/colorblank"
        android:textColor="@color/colorblack"
        android:drawableLeft="@mipmap/icon_paramo_foreground"
        android:layout_margin="10dp"/>

        <Button
            android:id="@+id/secas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laguna"
            android:background="@color/colorblank"
            android:textColor="@color/colorblack"
            android:drawableLeft="@mipmap/icon_secas_foreground"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/muerte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muertepungo"
            android:background="@color/colorblank"
            android:textColor="@color/colorblack"
            android:drawableLeft="@mipmap/icon_muerte_foreground"
            android:layout_margin="10dp"/>


    </LinearLayout>

</LinearLayout>