<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GalleryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="@drawable/mica"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_mica"
        android:textColor="@color/colorblack"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/micas"
                android:gravity="center"
                android:textColor="@color/colorblack"
                android:textSize="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/colorblack"
        android:text="@string/mica"
        android:textSize="15dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>