<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GalleryActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/antisana"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_volcan"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Localización"
                android:layout_margin="10dp"/>
            <Button
                android:layout_width="150dp"
                android:background="@drawable/btn_main"
                android:layout_height="30dp"
                android:text="Napo y Pichinca"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Localización"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/provincia"
                android:layout_width="150dp"
                android:background="@drawable/btn_main"
                android:layout_height="30dp"
                android:text="5.704 m"
                android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/colorblack"
        android:text="@string/todoantisana"
        android:textSize="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorblack"
            android:text="@string/text_1"
            android:textSize="20dp"
            android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_2"
        android:textColor="@color/colorblack"
        android:textSize="15dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>