<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondogra"
    tools:context=".JoseMariaactivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/josemaria"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textColor="@color/colorblack"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@color/colorblank"
            android:drawableLeft="@mipmap/icon_estrella_foreground"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@color/colorblack"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_main"
            android:textColor="@color/colorblack"
            android:layout_margin="10dp"
            android:text="0999091902"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorblack"
            android:text="@string/email"/>
        <Button
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textColor="@color/colorblack"
            android:background="@drawable/btn_main"
            android:layout_margin="10dp"
            android:text="josemariaecolodge@gmail.com"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorblack"
            android:text="@string/sitios"/>

        <Button
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:textColor="@color/colorblack"
            android:background="@drawable/btn_main"
            android:layout_margin="10dp"
            android:text="HosteriaJoseMaria.com"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galeria"
            android:textColor="@color/colorblack"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img1"
            android:background="@drawable/img5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginRight="7dp"/>

        <ImageView
            android:id="@+id/img2"
            android:background="@drawable/img1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_toRightOf="@id/img1"
            android:layout_marginRight="7dp"/>

        <ImageView
            android:id="@+id/img3"
            android:background="@drawable/img2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_toRightOf="@id/img2"
            android:layout_marginRight="7dp"/>

        <ImageView
            android:id="@+id/img4"
            android:background="@drawable/img3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_toRightOf="@id/img3"
            android:layout_marginRight="7dp"/>

        <ImageView
            android:id="@+id/img5"
            android:layout_width="200dp"
            android:background="@drawable/img4"
            android:layout_height="200dp"
            android:layout_toRightOf="@id/img4"
            android:layout_marginRight="7dp"/>

    </RelativeLayout>

        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>



</LinearLayout>